# easyVim

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  loadsave.cpp  testQuitSave.txt
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: autobot_ubuntu.yml  autobot_windows.yml  test.yml
docs/: a_2calculate_8hpp.html  a_2calculate_8hpp__dep__incl.dot  a_2calculate_8hpp_source.html  annotated.html  b_2calculate_8hpp_source.html  calculate_8hpp.html  calculate_8hpp_source.html  classMD5-members.html  classMD5.html  classes.html  classevFile.html  classev_1_1EVCommand-members.html  classev_1_1EVCommand.html  classev_1_1EVCommand__coll__graph.dot  classev_1_1EVConfig-members.html  classev_1_1EVConfig.html  classev_1_1EVConfig__inherit__graph.dot  classev_1_1EVFile-members.html  classev_1_1EVFile.html  classev_1_1EVOper-members.html  classev_1_1EVOper.html  classev_1_1EVOper__inherit__graph.dot  classev_1_1Parser-members.html  classev_1_1Parser.html  classev_1_1evFile-members.html  classev_1_1evFile.html  classev_1_1window-members.html  classev_1_1window.html  config_8hpp.html  config_8hpp__dep__incl.dot  config_8hpp__incl.dot  config_8hpp_source.html  core_8hpp.html  core_8hpp__dep__incl.dot  core_8hpp__incl.dot  core_8hpp_source.html  dir_000001_000002.html  dir_000001_000003.html  dir_000001_000004.html  dir_000001_000005.html  (+78 more)
docs/search/: all_0.js  all_1.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  (+22 more)
src/: include.hpp
src/modules/: CMakeLists.txt  config.hpp  lib.cpp  main.cpp  show.cpp  show.hpp
src/modules/calc/a/: calculate.cpp  calculate.hpp
src/modules/calc/b/: calculate.cpp  calculate.hpp
src/modules/core/: core.hpp  fileIO.cpp  loadsave.cpp  search_replace.cpp
src/modules/encrypt/: aes.cpp  encrypt.cpp  encrypt.hpp  md5.cpp
src/modules/instructions/: inst.hpp  inst_command.cpp  inst_command.hpp  inst_operation.cpp  inst_operation.hpp
src/modules/utils/: parser.cpp  parser.hpp
src/test/: CMakeLists.txt  test_basic.cpp  test_calculate.cpp  test_core.cpp  test_encrypt.cpp  test_interface.cpp
tools/: EVcmd.cpp
